# bookmark-backup

./: README.md  noxfile.py  pyproject.toml
.github/workflows/: code_quality.yml
src/bookmark_backup/: __init__.py  __main__.py  main.py
src/bookmark_backup/cli/: cli_main.py
src/bookmark_backup/core/: __init__.py  constants.py  detect_env.py  setup.py  validators.py
src/bookmark_backup/domain/: Bookmarks.py  __init__.py
src/bookmark_backup/finder/: __init__.py  bookmarks_file_paths.json  controllers.py  methods.py
