[project]
name = "bookmark-backup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "redjax", email = "none@none.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
bookmark-backup = "bookmark_backup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
